# Formula

./: .gitignore  CMakeLists.txt  LICENSE  README.md  built_in.cpp  formula.cpp  formula.h
Example/: CMakeLists.txt  ex2.cpp  main.cpp  structs.h  testOptimize.cpp
benchmark/: CMakeLists.txt
benchmark/benchmark/: CMakeLists.txt
benchmark/examples/: CMakeLists.txt  benchmarkParse.cpp  benchmarkParseToken.cpp  benchmarkParseToken_report.txt  benchmarkParse_report.txt
include/: exceptions.hpp  formula.hpp  formula_exeption.hpp  token.hpp
src/: built_in.cpp  built_in.hpp  exceptions.cpp  formula.cpp  formula_exeption.cpp  token.cpp  utils.cpp
tests/: CMakeLists.txt  test_eval.cpp
